hphp/test/slow/unset/1120.php.expectf
Fatal error: `$this` cannot be unset in %s on line 5
